--- a/n1.css
+++ b/n1.css
@@ -186,6 +186,8 @@
   .sec-2 {
     display: flex;
     flex-direction: column;
+    padding: 30px;
+    justify-content: center;
   }
   .sec-2 .wrapper {
     display: flex;
@@ -454,6 +456,7 @@
   .sec-5 {
     padding: auto;
     flex-direction: column;
+    padding: 30px;
   }
   .sec-5 .text-nox01 .nox00 {
     margin-top: 20px;
@@ -466,7 +469,7 @@
   }
   .sec-5 .text-nox01 .ipsum01 {
     margin-left: 0px;
-    width: 500px;
+    width: 400px;
   }
   .sec-5 .text-nox01 .xok01 {
     display: flex;
