--- a/n1.scss
+++ b/n1.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .navbar {
   max-width: 1440px;
   margin: 0 auto;
@@ -188,7 +189,8 @@
   .sec-2 {
     display: flex;
     flex-direction: column;
-
+    padding: 30px;
+    justify-content: center;
     .wrapper {
       display: flex;
       padding: 10px;
@@ -457,6 +459,7 @@
   @media (max-width: 500px) {
     padding: auto;
     flex-direction: column;
+    padding: 30px;
     .text-nox01 {
       .nox00 {
         margin-top: 20px;
@@ -469,7 +472,7 @@
       }
       .ipsum01 {
         margin-left: 0px;
-        width: 500px;
+        width: 400px;
       }
       .xok01 {
         display: flex;
